Switching to home_timeline instead of friends_timeline.

--- a/popup.html
+++ b/popup.html
@@ -457,7 +457,7 @@ $(function() {
   </select>
   <div id="tabs">
     <ul>
-      <li><a href="#timeline"><span>Friends</span></a></li>
+      <li><a href="#timeline"><span>Home</span></a></li>
       <li><a href="#timeline_mentions"><span title="Coming soon...">@<span class="__username"></span></span></a></li>
       <li><a href="#timeline_dm"><span title="Coming soon...">DM</span></a></li>
     </ul>
