Updating index, version 0.4

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Chromed Bird
 <div id="wrong_browser" class="top_box">
 </div>
 
-<div id="install" class="top_box" onclick="location.href='http://cloud.github.com/downloads/cezarsa/chromed_bird/chromed_bird_0.3.crx'">
+<div id="install" class="top_box" onclick="location.href='http://cloud.github.com/downloads/cezarsa/chromed_bird/chromed_bird_0.4.crx'">
 Install it now!
 </div>
 
@@ -133,6 +133,10 @@ Install it now!
 </div>
 
 <div id="content_right" class="side_box">
+  <h1>ChangeLog</h1>
+  <p>
+    <iframe style="width: 100%; height: 180px; border: 0;" src="http://github.com/cezarsa/chromed_bird/raw/master/Changelog"></iframe>
+  </p>
   <h1>Current Features</h1>
   <ul>
     <li>Follow your friends timeline and navigate through older tweets;</li>
